update docker file

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,4 +4,4 @@ MAINTAINER Borgy Manotoy <borgymanotoy@ujeaze.com>
 # Copy configurations (Tomcat users, Manager app)
 ADD tomcat-users.xml /usr/local/tomcat/conf/
 ADD context.xml /usr/local/tomcat/webapps/manager/META-INF/
-ADD ../target/spring-mvc-xml-demo.war /usr/local/tomcat/webapps/
+ADD spring-mvc-xml-demo.war /usr/local/tomcat/webapps/
