--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -11,17 +11,17 @@ node {
         }
         stage ('Tests') {
 	        parallel 'static': {
-	            sh "echo 'shell scripts to run static tests...'"
+	            echo 'shell scripts to run static tests...'
 	        },
 	        'unit': {
-	            sh "echo 'shell scripts to run unit tests...'"
+	            echo 'shell scripts to run unit tests...'
 	        },
 	        'integration': {
-	            sh "echo 'shell scripts to run integration tests...'"
+	            echo 'shell scripts to run integration tests...'
 	        }
         }
       	stage ('Deploy') {
-            sh "echo 'shell scripts to deploy to server...'"
+            echo 'shell scripts to deploy to server...'
       	}
     } catch (err) {
         currentBuild.result = 'FAILED'
