--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -7,7 +7,8 @@ node {
         	checkout scm
         }
         stage ('Build') {
-        	echo 'shell scripts to build project...'
+        	mvn clean package
+			echo 'shell scripts to build project...'
         }
         stage ('Tests') {
 	        parallel 'static': {
