--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -8,7 +8,7 @@ node {
         }
         stage ('Build') {
 			steps {
-				mvn clean package
+				sh 'mvn clean package'
 			}
         }
         stage ('Tests') {
