--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -8,7 +8,8 @@ node {
         }
         stage ('Build') {
 			steps {
-				sh 'mvn clean package'
+				//sh 'mvn clean package'
+				echo 'Building...'
 			}
         }
         stage ('Tests') {
