--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,31 +1,30 @@
-pipeline {
-	stages {
-		stage ('Clean Workspace') {
-			// Clean workspace before doing anything
-			deleteDir()		
-		}
-		stage ('Git Clone') {
-			checkout scm
-		}
-		stage ('Build') {
-			steps {
-				bat echo 'Building...'
-				bat 'mvn clean package'
-			}
-		}
-		stage ('Tests') {
-			parallel 'static': {
-				echo 'shell scripts to run static tests...'
-			},
-			'unit': {
-				echo 'shell scripts to run unit tests...'
-			},
-			'integration': {
-				echo 'shell scripts to run integration tests...'
-			}
-		}
-		stage ('Deploy') {
-			echo 'shell scripts to deploy to server...'
-		}
-	}
+node {
+ 	// Clean workspace before doing anything
+    deleteDir()
+
+    try {
+        stage ('Clone') {
+        	checkout scm
+        }
+        stage ('Build') {
+        	bat "echo 'shell scripts to build project...'"
+        }
+        stage ('Tests') {
+	        parallel 'static': {
+	            bat "echo 'shell scripts to run static tests...'"
+	        },
+	        'unit': {
+	            bat "echo 'shell scripts to run unit tests...'"
+	        },
+	        'integration': {
+	            bat "echo 'shell scripts to run integration tests...'"
+	        }
+        }
+      	stage ('Deploy') {
+            bat "echo 'shell scripts to deploy to server...'"
+      	}
+    } catch (err) {
+        currentBuild.result = 'FAILED'
+        throw err
+    }
 }
