--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,29 +1,37 @@
-node {
-	stage ('Clean Workspace') {
-		// Clean workspace before doing anything
-		deleteDir()		
-	}
-	stage ('Git Clone') {
-		checkout scm
-	}
-	stage ('Build') {
-		steps {
-			bat echo 'Building...'
-			bat 'mvn clean package'
+pipeline {
+	agent any
+    options {
+        timeout(time: 1, unit: 'HOURS') 
+    }
+    stages {
+        stage('Clean Workspace') {
+            steps {
+                // Clean workspace before doing anything
+				deleteDir()	
+            }
+			stage ('Git Clone') {
+				checkout scm
+			}
+			stage ('Build') {
+				steps {
+					bat echo 'Building...'
+					bat 'mvn clean package'
+				}
+			}
+			stage ('Tests') {
+				parallel 'static': {
+					echo 'shell scripts to run static tests...'
+				},
+				'unit': {
+					echo 'shell scripts to run unit tests...'
+				},
+				'integration': {
+					echo 'shell scripts to run integration tests...'
+				}
+			}
+			stage ('Deploy') {
+				echo 'shell scripts to deploy to server...'
+			}		
 		}
-	}
-	stage ('Tests') {
-		parallel 'static': {
-			echo 'shell scripts to run static tests...'
-		},
-		'unit': {
-			echo 'shell scripts to run unit tests...'
-		},
-		'integration': {
-			echo 'shell scripts to run integration tests...'
-		}
-	}
-	stage ('Deploy') {
-		echo 'shell scripts to deploy to server...'
-	}
+    }
 }
