--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,4 +1,5 @@
 pipeline {
+	def app
 	agent any
     options {
         timeout(time: 1, unit: 'HOURS') 
@@ -19,6 +20,11 @@ pipeline {
 			steps {
 				bat "echo 'Building...'"
 				bat 'mvn clean package'
+			}
+		}
+		stage ('Build Docker Image') {
+			steps {
+				app = docker.build("tyt/myspringapp")
 			}
 		}
 		stage ('Tests') {
