--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -17,14 +17,18 @@ pipeline {
 		}
 		stage ('Build') {
 			steps {
+				
 				bat "echo 'Building...'"
 				bat 'mvn clean package'
 			}
 		}
 		stage ('Build Docker Image') {
 			steps {
-				bat "echo 'Building docker image...'"
-				sh "docker build -t tyt/myspringapp:latest ./docker/"
+				dir('docker') {
+					docker.build("tyt/myspringapp:${env.BUILD_NUMBER}")
+				}
+			//	bat "echo 'Building docker image...'"
+			//	sh "docker build -t tyt/myspringapp:latest ./docker/"
 			}		
 		}
 		stage ('Tests') {
