--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -17,16 +17,16 @@ pipeline {
 		}
 		stage ('Build') {
 			steps {
-				
 				bat "echo 'Building...'"
 				bat 'mvn clean package'
 			}
 		}
 		stage ('Build Docker Image') {
 			steps {
-				dir('docker') {
-					docker.build("tyt/myspringapp:${env.BUILD_NUMBER}")
-				}
+				step([$class: 'DockerBuilderPublisher', cleanImages: false, cleanupWithJenkinsJobDelete: false, cloud: 'docker', dockerFileDirectory: 'docker', pullCredentialsId: '', pushCredentialsId: '', pushOnSuccess: false, tagsString: 'tyt/myspringapp'])
+				//dir('docker') {
+				//	docker.build("tyt/myspringapp:${env.BUILD_NUMBER}")
+				//}
 			//	bat "echo 'Building docker image...'"
 			//	sh "docker build -t tyt/myspringapp:latest ./docker/"
 			}		
