--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,57 +1,19 @@
-pipeline {
-	agent none
-    options {
-        timeout(time: 1, unit: 'HOURS') 
-    }
+node {
     stages {
         stage('Clean Workspace') {
-            steps {
-                // Clean workspace before doing anything
-				deleteDir()	
-            }
+		deleteDir()
+	}
+	stage ('Git Clone') {
+		checkout scm
+	}
+	stage ('Build') {
+		bat "echo 'Building...'"
+		bat 'mvn clean package'
+	}
+	stage ('Build Docker Image') {
+		dir('docker') {
+			docker.build("tyt/myspringapp:8.111")
 		}
-		stage ('Git Clone') {
-			steps {
-				checkout scm
-			}
-		}
-		stage ('Build') {
-			steps {
-				bat "echo 'Building...'"
-				bat 'mvn clean package'
-			}
-		}
-		stage ('Build Docker Image') {
-			steps {
-				dir('docker') {
-					docker.build("tyt/myspringapp:8.111")
-				}	
-				//bat 'copy .\\target\\*.war .\\docker'
-				//step([$class: 'DockerBuilderPublisher', cleanImages: true, cleanupWithJenkinsJobDelete: false, cloud: 'docker', dockerFileDirectory: 'docker', pullCredentialsId: '', pushCredentialsId: '', pushOnSuccess: false, tagsString: 'tyt/myspringapp'])
-				//dir('docker') {
-				//	docker.build("tyt/myspringapp:${env.BUILD_NUMBER}")
-				//}
-			//	bat "echo 'Building docker image...'"
-			//	sh "docker build -t tyt/myspringapp:latest ./docker/"
-			}		
-		}
-		stage ('Tests') {
-			steps {
-				parallel 'static': {
-					bat "echo 'shell scripts to run static tests...'"
-				},
-				'unit': {
-					bat "echo 'shell scripts to run unit tests...'"
-				},
-				'integration': {
-					bat "echo 'shell scripts to run integration tests...'"
-				}
-			}
-		}
-		stage ('Deploy') {
-			steps {
-				bat "echo 'shell scripts to deploy to server...'"
-			}
-		}
+	}
     }
 }
