--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -7,7 +7,7 @@ node {
 	}
 	stage ('Build') {
 		sh "echo 'Building...'"
-		sh 'mvn clean package'
+		//sh 'mvn clean package'
 	}
 	stage ('Build Docker Image') {
 		docker.build("tyt/myspringapp:8.111", "./docker")
