--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,4 +1,4 @@
-node {
+node("docker") {
 	stage('Clean Workspace') {
 		deleteDir()
 	}
@@ -6,12 +6,10 @@ node {
 		checkout scm
 	}
 	stage ('Build') {
-		sh "echo 'Building...'"
-		//sh 'mvn clean package'
+		bat "echo 'Building...'"
+		bat 'mvn clean package'
 	}
 	stage ('Build Docker Image') {
-		docker.withServer('tcp://192.168.0.103:2375') {
-			docker.build("tyt/myspringapp:8.111", "./docker")
-		}
-	}
+		docker.build("tyt/myspringapp:8.111", "docker")
+    }
 }
