--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -18,12 +18,12 @@ pipeline {
 		stage ('Build') {
 			steps {
 				sh "echo 'Building...'"
-				sh 'mvn clean package'
+				//sh 'mvn clean package'
 			}
 		}
 		stage ('Build Docker Image') {
 			steps {
-				sh 'cp ./target/*.war ./docker'
+				//sh 'cp ./target/*.war ./docker'
 				step([$class: 'DockerBuilderPublisher', cleanImages: false, cleanupWithJenkinsJobDelete: false, cloud: 'docker', dockerFileDirectory: 'docker', pullCredentialsId: '', pushCredentialsId: '', pushOnSuccess: false, tagsString: 'tyt/myspringapp'])
 				//dir('docker') {
 				//	docker.build("tyt/myspringapp:${env.BUILD_NUMBER}")
