--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,4 +1,4 @@
-node("helloworld") {
+node {
 	stage('Clean Workspace') {
 		deleteDir()
 	}
@@ -6,10 +6,12 @@ node("helloworld") {
 		checkout scm
 	}
 	stage ('Build') {
-		sh "echo 'Building...'"
-		//sh 'mvn clean package'
+		bat "echo 'Building...'"
+		bat 'mvn clean package'
 	}
 	stage ('Build Docker Image') {
-		docker.build("tyt/myspringapp:8.111", "docker")
+		
+		docker.withServer('tcp://192.168.0.103:2375') {
+		docker.build("tyt/myspringapp:8.111", "./docker")
     }
 }
