--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -6,12 +6,12 @@ node {
 		checkout scm
 	}
 	stage ('Build') {
-		bat "echo 'Building...'"
-		bat 'mvn clean package'
+		sh "echo 'Building...'"
+		//sh 'mvn clean package'
 	}
 	stage ('Build Docker Image') {
-		
 		docker.withServer('tcp://192.168.0.103:2375') {
-		docker.build("tyt/myspringapp:8.111", "./docker")
+			docker.build("tyt/myspringapp:8.111", "./docker")
+		}
     }
 }
